Add a GUI to the chatbot